added sources and app research

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -12,14 +12,6 @@
   url           = {http://www.mdpi.com/2078-2489/9/1/12},
 }
 
-@book{prvy_skaut,
-  author        = {Ján Mitrík and Wojciech Rytter},
-  title         = {Prvý skaut},
-  publisher     = {Slovenský skauting},
-  year          = {2017},
-  isbn          = {978-80-89776-12-2},
-}
-
 @book{Motwani2014,
   author        = {Rajeev Motwani and Jeffrey D. Ullman and John E. Hopcroft},
   title         = {Introduction to automata theory, languages, and computation},
@@ -98,4 +90,254 @@
 	month = {8},
 	year = {2024},
   note = "[Citováno 27. 2. 2025]"
+}
+
+@article{sdlc,
+	title = {Software development life cycle ({SDLC}) methodologies for information systems project management},
+	volume = {5},
+	url = {https://pdfs.semanticscholar.org/9eed/fc508509d415c305116ffb258ff5147fd8b8.pdf},
+	number = {5},
+	journal = {International Journal for Multidisciplinary Research},
+	author = {Hossain, Mohammad Ikbal},
+	year = {2023},
+	pages = {1--36},
+}
+
+@inproceedings{zber_poziadaviek,
+	address = {San Diego, CA, USA},
+	title = {Techniques for requirements elicitation},
+	isbn = {978-0-8186-3120-7},
+	url = {http://ieeexplore.ieee.org/document/324822/},
+	doi = {10.1109/ISRE.1993.324822},
+	urldate = {2025-11-23},
+	booktitle = {[1993] {Proceedings} of the {IEEE} {International} {Symposium} on {Requirements} {Engineering}},
+	publisher = {IEEE Comput. Soc. Press},
+	author = {Goguen, J.A. and Linde, C.},
+	year = {1992},
+	pages = {152--164},
+}
+
+@book{rangersky_horizont,
+	address = {Bratislava},
+	title = {Rangerský horizont: príručka pre rangerky a rangerov},
+	isbn = {978-80-89776-22-1},
+	publisher = {Slovenský skauting},
+	author = {BEŽILLA, Jakub and SUVÁK, Marián},
+	year = {2019},
+}
+
+@book{prvy_skaut,
+	address = {Bratislava},
+	title = {Prvý skaut: skautský chodník : 1. stupeň.},
+	isbn = {978-80-89776-12-2},
+	publisher = {Slovenský skauting},
+	author = {MITRÍK, Ján and SUVÁK, Marián},
+	year = {2017},
+}
+
+@book{posledny_vrchol,
+	address = {Bratislava},
+	title = {Posledný vrchol: skautský chodník : 3. stupeň.},
+	isbn = {978-80-89776-27-6},
+	publisher = {Slovenský skauting},
+	author = {MITRÍK, Ján and SUVÁK, Marián},
+	year = {2019},
+}
+
+@book{nezname_cesty,
+	address = {Bratislava},
+	title = {Neznáme cesty: skautský chodník : 2. stupeň.},
+	isbn = {978-80-89776-18-4},
+	publisher = {Slovenský skauting},
+	author = {MITRÍK, Ján and SUVÁK, Marián},
+	year = {2019},
+}
+
+@incollection{usability_testing,
+	title = {Usability {Testing} {Methods} and {Usability} {Laboratory} {Management}},
+	isbn = {978-1-80356-636-8},
+	url = {https://www.intechopen.com/chapters/85415},
+	doi = {10.5772/intechopen.109140},
+	abstract = {Usability testing of software products is of key importance nowadays. In order for usability testing to have the desired effect, the appropriate testing methodology must be chosen. Usability testing can be carried out using qualitative or quantitative methods. A widely used qualitative method today is the heuristic evaluation proposed by Jacob Nielsen. However, there are other testing methods such as cognitive walkthrough or collaborative testing (proposed by Josef Pavlicek and R. Bock). Although heuristic analysis has generally received a lot of attention in the current literature, it is important to put the other methods in the right light. These provide a significantly better view of the user’s passage through the interface under test. The methods better simulate the environment in which the final UI will operate. The user experience (UX) is then significantly better measurable if the participant goes through the test scenario in a cognitive (i.e., mental model-defined) way, rather than by mere heuristic evaluation. A significant milestone is then the cognitive-collaborative passage, where the collaborative element of the evaluators contributes to the evaluation of the solution.},
+	language = {en},
+	urldate = {2026-01-31},
+	booktitle = {Updates on {Software} {Usability}},
+	publisher = {IntechOpen},
+	author = {Pavlíček, Josef and Pavlíčková, Petra and Pavlíček, Josef and Pavlíčková, Petra},
+	month = dec,
+	year = {2022},
+	file = {Full Text PDF:/Users/galagt/Zotero/storage/2W39ERIP/Pavlíček et al. - 2022 - Usability Testing Methods and Usability Laboratory Management.pdf:application/pdf},
+}
+
+@inproceedings{jia_user-friendly_2023,
+	title = {A {User}-{Friendly} {Mobile} {Application} to {Accelerate} the {Attainment} of the {First} {Class} {Rank} in the {Boy} {Scouts} of {America} using the {Unity} {Engine}},
+	isbn = {978-1-923107-03-8},
+	url = {https://aircconline.com/csit/papers/vol13/csit131512.pdf},
+	doi = {10.5121/csit.2023.131512},
+	abstract = {The process of Scouts within the Boy Scouts of America ranking up to First Class, and eventually Eagle, can be quite gruesome and challenging [1]. Though there are various resources online ranging from articles and videos that explain how to potentially speed up the ranking process, none of them actually give an effective solution to the problem. Scouts nowadays lack things like attention span because of the harmful side of social media, especially TikTok [2]. They don’t want tips and tricks on how to rank faster, and they also don’t want to flip through massive textbooks to find the answers to requirements. They just want straightforward and quick answers to their problems without any stalling. This is exactly what the Trail to First Class app is. It gives them quick answers to their problems without any ties. Though, the app is not perfect. There is a severe limitation that if some requirements require scouts to, for example, identify things around their geological area, the app cannot help them because providing the answers to every single possible geological area would be quite inefficient. Though something like this might be possible in the future, it definitely cannot come now. Despite the limitations, the app is more than enough to provide scouts with all the resources they need in order to accelerate their ranking process.},
+	language = {en},
+	urldate = {2026-01-31},
+	booktitle = {Advances in {Computing} \& {Information} {Technologies}},
+	publisher = {Academy \& Industry Research Collaboration},
+	author = {Jia, Yuanxin and Morris, John},
+	month = aug,
+	year = {2023},
+	pages = {131--140},
+	file = {PDF:/Users/galagt/Zotero/storage/ZK7B4XTA/Jia and Morris - 2023 - A User-Friendly Mobile Application to Accelerate the Attainment of the First Class Rank in the Boy S.pdf:application/pdf},
+}
+
+@misc{noauthor_ciel_2022,
+	title = {Cieľ, princípy a metóda},
+	url = {https://skauting.sk/verejnost/o-nas/ciel-principy-a-metoda/},
+	language = {sk-SK},
+	urldate = {2026-02-05},
+	journal = {Slovenský skauting},
+	month = mar,
+	year = {2022},
+	file = {Snapshot:/Users/galagt/Zotero/storage/MG4D55EI/ciel-principy-a-metoda.html:text/html},
+}
+
+@inproceedings{faiz_data_2016,
+	title = {Data synchronization in distributed client-server applications},
+	url = {https://ieeexplore.ieee.org/document/7569323/},
+	doi = {10.1109/ICETECH.2016.7569323},
+	abstract = {Mobility is one of the major feature in the present computing environment and in the present era of computing almost all the mobile devices have the ability that they can easily be move from one location to other and the data reside on a single system can be utilize via other systems generally using the client-server paradigm . The mobile device can extract needed amount of data from the server and use in both online and as well as in offline mode, but whatever the changes being made during offline work should be copied back to the server and vice-versa whenever the server connects. As the server should always retain most recent data received from client database. So, the data synchronization is a major concern in this scenario by which data confliction can be resolved, data integrity is maintained and most recent data can be placed between the client-server. In this paper the overall data synchronization summary, architecture, tools \& techniques between the two devices has been included.},
+	urldate = {2026-02-05},
+	booktitle = {2016 {IEEE} {International} {Conference} on {Engineering} and {Technology} ({ICETECH})},
+	author = {Faiz, Mohammad and Shanker, Udai},
+	month = mar,
+	year = {2016},
+	keywords = {Bidirectional control, Cloud computing, Databases, log, mobile device, Mobile handsets, offline, Rsync, Servers, Synchronization, time stamp},
+	pages = {611--616},
+	file = {Full Text PDF:/Users/galagt/Zotero/storage/9D93UUNV/Faiz and Shanker - 2016 - Data synchronization in distributed client-server applications.pdf:application/pdf},
+}
+
+@inproceedings{banker_usability_2022,
+	title = {Usability testing with children: {History} of best practices, comparison of methods \& gaps in literature},
+	shorttitle = {Usability testing with children},
+	url = {https://dl.designresearchsociety.org/drs-conference-papers/drs2022/researchpapers/225},
+	doi = {10.21606/drs.2022.646},
+	abstract = {This paper is a systematized literature review centered on the best practices of usability testing with children, when they are the target end user in product development. The paper begins with a brief history of usability testing with children during the prototyping stage of product development. Following, the methodology guiding this literature review is described. Then, guidelines for usability testing with children provided by past research are outlined in chronological order, documented to show the evolution of changes or improvements in the practices over time. Additionally, most of the approaches to usability (as part of evaluative research) have been identified and compared between one another with a variety of factors. In conclusion, directions for further research are suggested based on current unanswered questions in the field of prototype usability testing with children, such as considerations for longitudinal vs. cross-sectional testing, physical vs. digital product testing, and age range of children.},
+	language = {en},
+	urldate = {2026-02-05},
+	author = {Banker, Andria and Lauff, Carlye},
+	month = jun,
+	year = {2022},
+	file = {PDF:/Users/galagt/Zotero/storage/ZVCLD772/Banker and Lauff - 2022 - Usability testing with children History of best practices, comparison of methods & gaps in literatu.pdf:application/pdf},
+}
+
+@inproceedings{swierenga_mobile_2014,
+	address = {Cham},
+	title = {Mobile {Design} {Usability} {Guidelines} for {Outdoor} {Recreation} and {Tourism}},
+	isbn = {978-3-319-07293-7},
+	doi = {10.1007/978-3-319-07293-7_36},
+	abstract = {Information-intensive websites such as those for outdoor recreation and tourism present complex design considerations and issues that need to be researched for mobile access. To gain a better understanding of the expectations and desires of users regarding a mobile application for outdoor recreation, researchers created a mobile application prototype for the US Army Corps of Engineers, which was subsequently tested for usability at two recreation sites in Kentucky with local participants. We provide an overview of our methods and results, and best practices we have gleaned from our findings. Our research is especially applicable for mobile applications that require access to a large amount of information and for a broad audience, and we also hope our study encourages more research in these areas.},
+	language = {en},
+	booktitle = {{HCI} in {Business}},
+	publisher = {Springer International Publishing},
+	author = {Swierenga, Sarah J. and Propst, Dennis B. and Ismirle, Jennifer and Figlan, Chelsea and Coursaris, Constantinos K.},
+	editor = {Nah, Fiona Fui-Hoon},
+	year = {2014},
+	keywords = {Mobile applications, mobile interfaces, outdoor recreation, public websites, tourism, usability},
+	pages = {371--378},
+	file = {Full Text PDF:/Users/galagt/Zotero/storage/CJ67VJMM/Swierenga et al. - 2014 - Mobile Design Usability Guidelines for Outdoor Recreation and Tourism.pdf:application/pdf},
+}
+
+@inproceedings{nurhudatiana_should_2018,
+	title = {Should {I} {Use} {Laptop} or {Smartphone}? a {Usability} {Study} on an {Online} {Learning} {Application}},
+	shorttitle = {Should {I} {Use} {Laptop} or {Smartphone}?},
+	url = {https://ieeexplore.ieee.org/document/8528134},
+	doi = {10.1109/ICIMTech.2018.8528134},
+	abstract = {Nowadays, people increasingly use smartphones for numerous activities including learning. This research aims to investigate the usability of an online learning application and compare if there is any difference in usability between usage in desktop environment and mobile environment. The research analyzed system usability according to the Nielsen's usability model and further investigated how learnability, efficiency, errors, and attractiveness of the application in both website version and mobile app version could influence user satisfaction. The research used Duolingo, an online learning application for foreign languages, and involved Gen Y and Gen Z populations in Jakarta, Indonesia as respondents. The results show that website usage in desktop environment scored higher in learnability compared to the mobile app version; while mobile app usage scored higher in attractiveness compared to the website version. It was also observed that user satisfaction in website and mobile app were influenced by different usability factors. Efficiency and errors were found to have significant influence on user satisfaction in desktop website usage, while only attractiveness showed significant influence on user satisfaction in mobile app usage.},
+	urldate = {2026-02-05},
+	booktitle = {2018 {International} {Conference} on {Information} {Management} and {Technology} ({ICIMTech})},
+	author = {Nurhudatiana, Arfika and Hiu, Alberto Nicodemus and Ce, Win},
+	month = sep,
+	year = {2018},
+	keywords = {usability, Electronic learning, Information systems, ISO Standards, mobile app, online learning, Portable computers, Task analysis, Usability, user experience, website},
+	pages = {565--570},
+	file = {Full Text PDF:/Users/galagt/Zotero/storage/AI3XLSNS/Nurhudatiana et al. - 2018 - Should I Use Laptop or Smartphone a Usability Study on an Online Learning Application.pdf:application/pdf},
+}
+
+@misc{noauthor_vyrocna_nodate,
+	title = {Výročná správa za rok 2024},
+	url = {https://skauting.sk/ustredie/publikacie/vyrocne-spravy/vyrocna-sprava-2024/},
+	language = {sk-SK},
+	urldate = {2026-02-10},
+	journal = {Slovenský skauting},
+	file = {PDF:/Users/galagt/Zotero/storage/HDPHW8BC/Výročná správa za rok 2024.pdf:application/pdf},
+}
+
+@misc{stupne_napredovania,
+	title = {Stupne napredovania},
+	url = {https://skauting.sk/skauti/program/stupne-napredovania/},
+	language = {sk-SK},
+	urldate = {2026-02-11},
+	journal = {Slovenský skauting},
+	month = jul,
+	year = {2025},
+	file = {Snapshot:/Users/galagt/Zotero/storage/6484VFPS/stupne-napredovania.html:text/html},
+}
+
+@misc{noauthor_odborky_2025,
+	title = {Odborky},
+	url = {https://skauting.sk/skauti/program/odborky/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jul,
+	year = {2025},
+}
+
+@misc{noauthor_skautske_2026,
+	title = {Skautské a rangerské odborky},
+	url = {https://skauting.sk/skauti/program/odborky/skautske-a-rangerske-odborky/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jan,
+	year = {2026},
+}
+
+@misc{noauthor_vyzvy_2025,
+	title = {Výzvy},
+	url = {https://skauting.sk/skauti/program/vyzvy/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jul,
+	year = {2025},
+	file = {Snapshot:/Users/galagt/Zotero/storage/BHULLUA4/vyzvy.html:text/html},
+}
+
+@misc{noauthor_najvyssie_2025,
+	title = {Najvyššie programové ocenenia},
+	url = {https://skauting.sk/skauti/program/najvyssie-programove-ocenenia/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jul,
+	year = {2025},
+}
+
+@misc{noauthor_volne_2025,
+	title = {Voľné programové moduly},
+	url = {https://skauting.sk/skauti/program/volne-programove-moduly/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jul,
+	year = {2025},
+	file = {Snapshot:/Users/galagt/Zotero/storage/EK4USZPY/volne-programove-moduly.html:text/html},
+}
+
+@misc{noauthor_7_2026,
+	title = {7 ľalií},
+	url = {https://skauting.sk/ustredie/ocenenia-a-vyznamenania/ocenenia/7-lalii/},
+	language = {sk-SK},
+	urldate = {2026-02-13},
+	journal = {Slovenský skauting},
+	month = jan,
+	year = {2026},
+	file = {Snapshot:/Users/galagt/Zotero/storage/HGB6YNHU/7-lalii.html:text/html},
 }
