--- a/text/chapter0_teoria.tex
+++ b/text/chapter0_teoria.tex
@@ -11,11 +11,13 @@ Táto kapitola sa venuje predstaveniu prostredia Slovenského skautingu. Násled
 \section{Slovenský skauting}
 Slovenský skauting (ďalej SLSK) je dobrovoľná, nezávislá, nepolitická, nezisková, výchovná organizácia mladých ľudí, prístupná všetkým bez rozdielu pohlavia, pôvodu, národnosti, rasy alebo náboženstva, ktorí chcú žiť a konať v súlade s poslaním, princípmi a výchovnou metódou stanovenými zakladateľom hnutia Róbertom Baden-Powellom. 
 SLSK pôsobí najmä v oblasti výchovy detí a mládeže, neformálneho vzdelávania detí a mládeže, vzdelávania dobrovoľných a profesionálnych pracovníkov s mládežou, dospelých a mladých lídrov, občianskej participácie mladých ľudí na živote spoločnosti, cieľavedomej výchovy mladej generácie k demokracii, prevencie pred vznikom závislostí, ochrany životného prostredia, sociálnych aktivít a práce so znevýhodnenými skupinami obyvateľstva, podpory dobrovoľníctva mladých ľudí a voľnočasových aktivít pre mladých ľudí.
+\cite{noauthor_vyrocna_nodate}
 
 \section{Program SLSK}
 Program v Slovenskom skautingu je zameraný na tvorbu odboriek, výziev, voľných programových modulov a príručiek osobného napredovania, ktoré vedúci využívajú na pravidelných stretnutiach s našimi členmi.
 Týmito aktivitami podporujeme naše vzdelávacie aktivity. 
 V roku 2024 sa organizácia v oblasti programu zamerala na dotlač a tvorbu nových publikácií, organizáciu programových akcií a prieskum o budúcom smerovaní a činnosti Programovej rady, ktorá koordinuje a zabezpečuje programové aktivity.
+\cite{noauthor_vyrocna_nodate}
 
 \subsection{Stupne Napredovania}
 Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria základný kameň programu a osobného rastu. Sú určené pre deti a dospievajúcich od 4 rokov až po 24 rokov. Program je rozčlenený do nasledujúcich vekových kategórií:
@@ -26,7 +28,7 @@ Stupne napredovania sú programovou časťou slovenského skautingu. Tvoria zák
     \item[15 - 18 rokov] Rangerský horizont
     \item[19 - 24 rokov] Roverský svet
     \item[11+ rokov] Nováčik - pre všetkých nových členov v Slovenskom skautingu.
-\end{description}
+\end{description}\cite{stupne_napredovania}
 
 \subsubsection{Skautský chodník}
 Skautský chodník sa delí na tri časti. Prvý skaut, Neznáme cesty a Posledný vrchol. Každá z týchto troch častí by mala zabrať rok.
@@ -45,34 +47,34 @@ Každá kategória obsahuje kapitoly ktoré predávajú čitateľovi myšlienku 
 
 Vyhodnocovanie úloh záleží od jednotlivých úloh. Existujú tri druhy overenia splnenia úlohy. Overenie radcom družiny alebo vedúcim, overenie rodičom skauta a overenie skautom samotným pri čom sa spolieha na jeho skautskú česť. Na úlohách sa cení snaha viac ako samotný výsledok úlohy.
 
-Po splnení určitého množstva úloh sa odomyká skautovi možnosť plniť výzvu z danej kategórie. Každá kategória má vlastnú výzvu.
+Po splnení určitého množstva úloh sa odomyká skautovi možnosť plniť výzvu z danej kategórie. Každá kategória má vlastnú výzvu.\cite{prvy_skaut,nezname_cesty,posledny_vrchol}
 
 \subsubsection{Prvý skaut}
-Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek skauta ktorý plní Prvého skauta je medzi 11 a 12 rokov. Veku skauta odpovedá aj forma ktorou je vedený Prvý skaut. V rámci Prvého skauta sú všetky úlohy predom dané a skaut nemá žiadnu voľbu čo by plnil. Kapitoly obshaujú veľa rozprávania a témam sa venujú skôr povrchne. Výzvy sa odomykajú po splnení všetkých úloh v danej kategórii.
+Prvý skuat predstavuje prvú časť skautského chodníka. Očakávaný vek skauta ktorý plní Prvého skauta je medzi 11 a 12 rokov. Veku skauta odpovedá aj forma ktorou je vedený Prvý skaut. V rámci Prvého skauta sú všetky úlohy predom dané a skaut nemá žiadnu voľbu čo by plnil. Kapitoly obshaujú veľa rozprávania a témam sa venujú skôr povrchne. Výzvy sa odomykajú po splnení všetkých úloh v danej kategórii.\cite{prvy_skaut}
 
 \subsubsection{Neznáme cesty}
-Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.
+Neznáme cesty predstavujú druhú časť skautského chodníka na ktorý nadväzujú. Oproti Prvému skautovi poskytujú skautovi väčšiu voľnosť vo výbere úloh. Každá úloha má počet bodov ktoré skaut dosiahne za jej splnenie. Cieľom každej kategórie je nazbieranie potrebného počtu bodov z úloh z danej kategórie. Každá kapitola obshuje jednu povinnú úlohu a sadu nepovinných úloh z ktorých si môže skaut vybrať. Výzvy sa odomykajú po splnení povinných úloh z danej kategórie.\cite{nezname_cesty}
 
 \subsubsection{Posledný vrchol}
-Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka v podobe povinných a voliteľných kapitól. Obsahom kapitol je podobná Neznámym cestám. Na rozdiel od Neznámych ciest v rámci Posledného vrcholu stačí skutovi nazbierať celkový počet naprieč všetkými kategóriami. Má takto najväčšiu volňnosť vo výslednej podobe jeho priechodu Posledným vrcholom.
+Posledný vrchol je posledná a záverečná časť skautského chodníka. Predstavuje najväčšiu volňnosť vo výbere úloh z celého skautského chodníka v podobe povinných a voliteľných kapitól. Obsahom kapitol je podobná Neznámym cestám. Na rozdiel od Neznámych ciest v rámci Posledného vrcholu stačí skutovi nazbierať celkový počet naprieč všetkými kategóriami. Má takto najväčšiu volňnosť vo výslednej podobe jeho priechodu Posledným vrcholom.\cite{posledny_vrchol}
 
 \subsection{Rangerský horizont}
-Rangerský horizont je koncipovaný na maximálne 3 roky. Skladá sa z piatich častí. Osobný rozvoj I, osobný rozvoj II, expedícia I, expedícia II a rangerský projekt. Osobný rast I a II predstavuje podobnú sériu úloh s akou sa skaut stretol počas plnenia skautského chodníka. Slúži na ďalšie prekonávanie samého seba. Expedícia sa zameriava zas na spoznávanie okolia. Na splnenie expedície si je treba vybrať druh expedície na ktorý sa skuat vydá, xy pre I a za pre II. Projekt je určený na tímové riešenie danej problematiky ktorú si rangery zvolia a schváli im ju vodca.
+Rangerský horizont je koncipovaný na maximálne 3 roky. Skladá sa z piatich častí. Osobný rozvoj I, osobný rozvoj II, expedícia I, expedícia II a rangerský projekt. Osobný rast I a II predstavuje podobnú sériu úloh s akou sa skaut stretol počas plnenia skautského chodníka. Slúži na ďalšie prekonávanie samého seba. Expedícia sa zameriava zas na spoznávanie okolia. Na splnenie expedície si je treba vybrať druh expedície na ktorý sa skuat vydá, xy pre I a za pre II. Projekt je určený na tímové riešenie danej problematiky ktorú si rangery zvolia a schváli im ju vodca.\cite{rangersky_horizont}
 
 
 \subsection{Odborky}
-Ďalšou programovou časťou sú odborky, ktoré fungujú nezávisle na stupňoch napredovania. Odborky predstavujú súbory úloh, ktorých splnenie vedie k nadobudnutiu odbornosti v danej téme. Delia sa do dvoch stupňov, zelený a červený. Pokiaľ odborka obsahuje zelený stupeň, treba ho získať pred splnením červeného stupňa. Odborky sú podobne ako stupne napredovania rozdelené do viacerých vekových kategórií. Sú prispôsobené charakteristikám a potrebám vekovej kategórie.
+Ďalšou programovou časťou sú odborky, ktoré fungujú nezávisle na stupňoch napredovania. Odborky predstavujú súbory úloh, ktorých splnenie vedie k nadobudnutiu odbornosti v danej téme. Delia sa do dvoch stupňov, zelený a červený. Pokiaľ odborka obsahuje zelený stupeň, treba ho získať pred splnením červeného stupňa. Odborky sú podobne ako stupne napredovania rozdelené do viacerých vekových kategórií. Sú prispôsobené charakteristikám a potrebám vekovej kategórie.\cite{noauthor_odborky_2025}
 
 \subsection{Výzvy}
-Výzvy sú programovou časťou zameranou na prekonávanie samého seba. Vedú skuatov mimo ich komfortnú zónu a vystavujú ich situáciam ktoré nie sú bežné. Výzvy obsahujú ciele ktoré by mali skauti naplniť. Trvanie výziev je rôzne, pri niektorých sa jedná o jednorázovú aktivitu a pri iných zas o dlhodobejšie venovanie sa danej tématike.
+Výzvy sú programovou časťou zameranou na prekonávanie samého seba. Vedú skuatov mimo ich komfortnú zónu a vystavujú ich situáciam ktoré nie sú bežné. Výzvy obsahujú ciele ktoré by mali skauti naplniť. Trvanie výziev je rôzne, pri niektorých sa jedná o jednorázovú aktivitu a pri iných zas o dlhodobejšie venovanie sa danej tématike.\cite{noauthor_vyzvy_2025}
 
 % https://www.skauting.sk/skauti/program/vyzvy/
 
 \subsection{Voľné programové moduly}
-Dobrovoľným rozšírením programu sú voľné programové moduly. Formou aj obsahom sa najviac približujú ku výzvam.
+Dobrovoľným rozšírením programu sú voľné programové moduly. Formou aj obsahom sa najviac približujú ku výzvam.\cite{noauthor_volne_2025}
 
 \subsection{Najvyššie programové ocenenia}
-Vyvrcholením programovej činnosti pre vekovú kategóriu je najvyššie programové ocenenie, ktoré sa získava po splnení ostatných častí programu pre danú vekovú kategóriu. 
+Vyvrcholením programovej činnosti pre vekovú kategóriu je najvyššie programové ocenenie, ktoré sa získava po splnení ostatných častí programu pre danú vekovú kategóriu. \cite{noauthor_najvyssie_2025}
 
 
 \section{Analýza podobných riešení}
@@ -86,9 +88,10 @@ Celosvetovosť skautského hnutia dáva priestor na vznik viacerým organizácia
 % 
 
 \subsection{Path To Eagle}
-Path to Eagle je aplikácia na 
+Path to Eagle je aplikácia na operačný systém iOS určená pre Scouting America. Aplikácia slúží na trackovanie progresu jednotlivých skautov v napredovaní cez hodnosti v rámci programu Scouting America. Aplikácia funguje čisto v offline prostredí a jediná možnosť na synchronizáciu postupu skautov je export progresu na jednom zariadení a import na druhom zariadení. Aplikácia umožňuje vytvorenie viacerých skautov a pre každého sledovať postup samostatne. Ku každému stupňnu napredovania v rámci programu Scoutig America poskytuje pre skauta checklist úloh ktoré musí splniť a umožňuje mu písať si k tomu vlastné poznámky. Ďalej aplikácia obsahuje zoznam odboriek ktoré môže skaut plniť. Ku každej odborke je následne dostupné pdf ktoré je výstrihom z knihy pre program Scouting America.
 
-\subsection{ScoutChamp}
+\subsection{Scout Champ}
+Aplikácia Scout Champ má podobný charakter ako aplikácia Path To Eagle. Okrem sledovania postupu jednotlivých členov však umožňuje aj zdieľanie progresu cez cloud. Progres však zdieľa spôsobo ktorým ho môže ktokoľvek s linkom prepísať bez žiadneho auditu alebo schvaľovania. Oproti aplikácii Path To Eagle sú odborky pretransformované taktiež do formy checklistu.
 
 \section{Softvérové inžinierstvo}
 
@@ -120,7 +123,7 @@ Metóda v tvare V je nadstavbou nad klasickou vodopádovou metódou. Oproti vodo
 
 Metóda rýchlej aplikácie je druh inkrementálnej metódy so zameraním sa na čo najrýchlejšie vytvorenie aplikácie. Často sú používané nástroje na tvorbu kódu a vlastný kód je držaný na minime. Zároveň sa zameriava na modularizáciu softvéru a paralelný vývoj nezávislých modulov čo rapídne znižuje dobu vývoja. Táto metóda je vhodná pre väčšie tími kde je dostatok vývojarov na paralelný vývoj softvéru.
 
-Agilná metodológia reprezentuje rodinu iteratívnych a inkrementálnych metód ktoré prioritizujú adaptabilitu a sploprácu so zákazníkom. V základe rozdeľuje projekt na šprinty. Jeden šprint trvá typicky 1 až 4 týždne a predchádza mu scrum, čo je stretnutie na synchronizáciu vykonávanej práce. Agilný prístup zdieľa väčšinu výhod a nevýhod z ostatných iteratívnych metód.
+Agilná metodológia reprezentuje rodinu iteratívnych a inkrementálnych metód ktoré prioritizujú adaptabilitu a sploprácu so zákazníkom. V základe rozdeľuje projekt na šprinty. Jeden šprint trvá typicky 1 až 4 týždne a predchádza mu scrum, čo je stretnutie na synchronizáciu vykonávanej práce. Agilný prístup zdieľa väčšinu výhod a nevýhod z ostatných iteratívnych metód.\cite{sdlc}
 
 
 
